--- a/assets/css/steller.css
+++ b/assets/css/steller.css
@@ -12167,7 +12167,7 @@ pre {
 }
 
 .img-wrapper .overlay {
-  background: rgba(255, 122, 87, 0.7);
+  background: rgb(209, 234, 248, 0.7);
   position: absolute;
   left: 0;
   bottom: 100%;
