--- a/assets/css/steller.css
+++ b/assets/css/steller.css
@@ -11714,6 +11714,7 @@ button.bg-dark:focus {
 
 .text-left {
   text-align: left !important;
+  border-left: 5px solid #D3D3D3;
 }
 
 .text-right {
@@ -12095,6 +12096,10 @@ pre {
   border-radius: 0.25rem;
 }
 
+.sub-title-one {
+  font-size: 1.7em;
+}
+
 .socials {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -12108,28 +12113,32 @@ pre {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  border: 2px solid #256ECE;
+  border: 2px solid #ffff;
   color: #2A7AE4;
   text-align: center;
   line-height: 40px;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   text-decoration: none;
-
-}
-
-.fa-linkedin:hover {
-  color: #0A66C2;
-}
-
-.social-item {
-  color: #5b5ce2 !important;
-}
-
-
-.socials .social-item:hover{
   background-color: #fff;
-  color: #0A66C2;
+  color: #121416 !important;
+
+}
+
+.fa-linkedin {
+  color: #0A66C2 !important;
+}
+
+.fa-github {
+  color: #670A99 !important;
+}
+
+.fa-whatsapp {
+  color: #2ED14B !important;
+}
+
+.fa-instagram{
+  color: #FF0872 !important;
 }
 
 .btn {
@@ -12822,22 +12831,25 @@ pre {
   color: #E84E31 !important;
 }
 
+.fa-bootstrap {
+  color: #533B78 !important;
+}
 
 .card-title-icon {
   color: #AFAFAF;
-}
-
-.card-title-icon:hover {
-  color: #B4BEC5;
 }
 
 .card-link {
   text-decoration: none;
 }
 
+.sub-title-zero {
+  font-size: 1em;
+}
+
 .sub-secundario {
   color: #121416;
-  font-size: 2em;
+  font-size: 1.7em;
   font-weight: 700;
 }
 
