--- a/assets/css/steller.css
+++ b/assets/css/steller.css
@@ -12197,7 +12197,7 @@ pre {
 }
 
 .img-wrapper .overlay {
-  background: rgb(209, 234, 248, 0.7);
+  background: rgb(244, 246, 247, 0.7);
   position: absolute;
   left: 0;
   bottom: 100%;
@@ -12221,7 +12221,7 @@ pre {
   transition: all 0.3s;
   -webkit-transition-delay: .2s;
   transition-delay: .2s;
-  color: #fff;
+  color: #256ECE;
 }
 
 .img-wrapper .overlay .overlay-infos h5 {
