--- a/assets/css/steller.css
+++ b/assets/css/steller.css
@@ -5066,6 +5066,12 @@ input[type="button"].btn-block {
   background-size: 100% 100%;
 }
 
+@media (max-width: 968px) {
+  .navbar-toggler-icon {
+    filter: invert(1); /* Inverte as cores, tornando o ícone branco */
+  }
+}
+
 @media (max-width: 575.98px) {
 
   .navbar-expand-sm>.container,
