--- a/assets/css/steller.css
+++ b/assets/css/steller.css
@@ -5496,8 +5496,8 @@ input[type="button"].btn-block {
 }
 
 .card-body:hover {
-  transform: translateY(-2px);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  transform: rotate(1deg); 
 }
 
 
